--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,10 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Manrope&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 .font-poppins {
     font-family: 'Poppins', sans-serif;
+}
+
+.font-anton {
+    font-family: 'Anton', sans-serif;
 }
